[package]
name = "alloc-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1.0"
arrayvec = { version = "0.7.4", default-features = false }
src = "0.0.6"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"
uint = "0.9.5"

[[bench]]
name = "bench_insert"
harness = false

# [[bench]]
# name = "bench_delete"
# harness = false

[[bench]]
name = "bench_search"
harness = false

[[bench]]
name = "bench_search_384"
harness = false

[[bench]]
name = "bench_delete_384"
harness = false

[[bench]]
name = "bench_delete"
harness = false

# [[bench]]
# name = "bench"
# harness = false
